--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,16 @@ version: '3.9'
 services: 
   Ever-cart-webapp:
     build: .
-    container_name: Ever-cart-webapp-cont
+    container_name: ever-cart-webapp-cont
     ports:
       - "3000:3000"
     environment:
       - MONGODB_URI=mongodb://ever-cart-mongo:27017/evercart
       - DB_NAME=evercart
     depends_on:
-      - Ever-cart-db
+      - ever-cart-db
 
-  Ever-cart-db:
+  ever-cart-db:
     image: mongo:latest
     container_name: ever-cart-mongo
     ports:
